--- a/style.scss
+++ b/style.scss
@@ -157,10 +157,18 @@ body {
                     text-decoration: none;
                     color: $text-tertiary;
                     gap: 0.25rem;
+                    transition: transform 0.3s ease;
+
+                    &:hover img {
+                        transform: translateX(-5px);
+                    }
+
+                    img {
+                        transition: transform 0.3s ease;
+                    }
 
                     p {
                         @include text-large;
-                        
                     }
                 }
             }
@@ -320,7 +328,6 @@ body {
             width: calc(33.33%);
             gap: 1.5rem;
             background-color: $dark-bg;
-
 
             .items-icon {
                 padding: 0.75rem;
