--- a/components/_footer.scss
+++ b/components/_footer.scss
@@ -286,6 +286,7 @@
                 display: flex;
                 align-items: center;
                 
+                
                 p {
                     @include text-small;
                     font-weight: 400;
@@ -297,6 +298,13 @@
                     display: flex;
                     height: 0.875rem;
                     margin: 0.125rem 0 0 0.25rem;
+                    text-decoration: none;
+
+                    p {
+                        font-weight: 500;
+                        color: $text-quad;
+                        text-align: center;
+                    }
                 }
 
                 .footer-last-name {
