--- a/style.css
+++ b/style.css
@@ -482,6 +482,12 @@
   display: flex;
   height: 0.875rem;
   margin: 0.125rem 0 0 0.25rem;
+  text-decoration: none;
+}
+.footer-container .footer-last-part .footer-last-info .footer-last-frame a p {
+  font-weight: 500;
+  color: rgb(156, 163, 175);
+  text-align: center;
 }
 .footer-container .footer-last-part .footer-last-info .footer-last-frame .footer-last-name {
   text-decoration: none;
